--- a/index.html
+++ b/index.html
@@ -6,13 +6,52 @@
 </head>
 <body>
 
-<h1>This is a floating example</h1>
+<h1>This is a CSS floating example</h1>
 <p>This is a paragraph.</p>
 
 
 <header>
-    <code>&#60;header&#62;</code>
-  </header>
+  <code>&#60;header&#62;</code>
+</header>
+  
+<div class="menusection">
+  <div class="dropdown">
+    <button class="dropbtn">Dropdown 1</button>
+    <div class="dropdown-content">
+      <a href="#">Link 11</a>
+      <a href="#">Link 12</a>
+      <a href="#">Link 13</a>
+    </div>
+  </div>  
+  <div class="dropdown">
+    <button class="dropbtn">Dropdown 2</button>
+    <div class="dropdown-content">
+      <a href="#">Link 21</a>
+      <a href="#">Link 22</a>
+      <a href="#">Link 23</a>
+    </div>
+  </div>
+  <div class="dropdown">
+    <button class="dropbtn">Dropdown 3</button>
+    <div class="dropdown-content">
+      <a href="#">Link 31</a>
+      <a href="#">Link 32</a>
+      <a href="#">Link 33</a>
+    </div>
+  </div>
+  <div class="dropdown">
+    <button class="dropbtn">Dropdown 4</button>
+    <div class="dropdown-content">
+      <a href="#">Link 41</a>
+      <a href="#">Link 42</a>
+      <a href="#">Link 43</a>
+    </div>
+  </div>
+</div>
+
+  <div class="breakrow">
+    
+  </div>
   
   <section>
     <code>&#60;section&#62; <br> row 1 float: left;</code>
@@ -26,6 +65,14 @@
     <code>&#60;section&#62; <br> row 1 float: left;</code>
   </section>
   
+  <section>
+    <code>&#60;section&#62; <br> row 1 float: left;</code>
+  </section>
+
+  <section>
+    <code>&#60;section&#62; <br> row 1 float: left;</code>
+  </section>
+
   <div class="breakrow">
     &#60;section&#62;  breakrow 1;
   </div> 
@@ -39,11 +86,40 @@
     <code>&#60;section&#62; <br> row 2 float: left;</code>
   </section>
   
+  <section>
+    <code>&#60;section&#62; <br> row 2 float: left;</code>
+  </section>
+  
+  <section>
+    <code>&#60;section&#62; <br> row 2 float: left;</code>
+  </section>
+  
+  <section>
+    <code>&#60;section&#62; <br> row 2 float: left;</code>
+  </section>
+  
+  
   
 
   <div class="breakrow">
     &#60;section&#62; breakrow 2;
   </div> 
+
+  <section>
+    <code>&#60;section&#62; <br> row 3 float: left;</code>
+  </section>
+
+  <section>
+    <code>&#60;section&#62; <br> row 3 float: left;</code>
+  </section>
+
+  <section>
+    <code>&#60;section&#62; <br> row 3 float: left;</code>
+  </section>
+
+  <section>
+    <code>&#60;section&#62; <br> row 3 float: left;</code>
+  </section>
 
   <section>
     <code>&#60;section&#62; <br> row 3 float: left;</code>
@@ -64,6 +140,38 @@
 
   <section>
     <code>&#60;section&#62; <br> row 4 float: left;</code>
+  </section>
+
+  <section>
+    <code>&#60;section&#62; <br> row 4 float: left;</code>
+  </section>
+
+  <section>
+    <code>&#60;section&#62; <br> row 4 float: left;</code>
+  </section>
+
+  <div class="breakrow">
+    &#60;section&#62;  breakrow 4;
+  </div> 
+
+  <section>
+    <code>&#60;section&#62; <br> row 5 float: left;</code>
+  </section>
+
+  <section>
+    <code>&#60;section&#62; <br> row 5 float: left;</code>
+  </section>
+
+  <section>
+    <code>&#60;section&#62; <br> row 5 float: left;</code>
+  </section>
+
+  <section>
+    <code>&#60;section&#62; <br> row 5 float: left;</code>
+  </section>
+
+  <section>
+    <code>&#60;section&#62; <br> row 5 float: left;</code>
   </section>
   
   <footer>
